--- a/index.html
+++ b/index.html
@@ -67,69 +67,20 @@
   display: table;
   clear: both;
 }
-
 	</style>
 
 	<body>
-		<h1>Visual Math</h1>
+		<h1>Simple Addition</h1>
 		
-		<p>Main objective of this project is to help visually impaired individuals learn mathematics. <br>
-			The idea is to present the concepts in a screen-reader friendly way for easy learning experience.</p><br><br>
-		
-		<div class="row">
-		<div class="column left"">
-		<ul>
-		<li><a href="SimpleAddition.html">Simple Addition</a>
-		<label for="simpleAdditionInfoBtn">Help </label>
-		<button class="button infobutton" id="simpleAdditionInfoBtn" onclick="simpleAdditionInfo()">?</button>
-		</li>
-		<li><a href="SimpleSubtraction.html">SimpleSubtraction</a>
-		<button class="button infobutton" onclick="simpleSubtractionInfo()">?</button>
-		</li>
-        <li><a href="SimpleMultiplication.html">SimpleMultiplication</a>
-		<button class="button infobutton" onclick="simpleMultiplicationInfo()">?</button>
-		</li>
-        <li><a href="PolynomialDiv.html">Polynomial Division</a>
-		<button class="button infobutton" onclick="polynomialDivisionInfo()">?</button>
-		</li>
-        <li><a href="SyntheticDiv.html">Synthetic Division</a>
-		<button class="button infobutton" onclick="syntheticDivisionInfo()">?</button>
-		</li>
-        <li><a href="MatrixAddition.html">Matrix Addition</a>
-		<button class="button infobutton" onclick="matrixAdditionInfo()">?</button>
-		</li>
-        <li><a href="MatrixAddition.html">Decimal To Binary Conversion</a>
-		<button class="button infobutton" onclick="matrixAdditionInfo()">?</button>
-		</li>
-        <li><a href="MatrixAddition.html">Binary To Decimal Conversion</a>
-		<button class="button infobutton" onclick="matrixAdditionInfo()">?</button>
-		</li>
-		</ul>
-		</div>
-		<div class="column right">
-		<textarea id="helpInfo" name="helpInfo" rows="1" cols="1" style="visibility:hidden" onblur="loseFocus()">
-		</textarea>
-		</div>
-		</div>
+		<p>This <a href="SimpleAddition.html">tool</a> will teach you how to add two numbers.</p>
 
+		<a href="https://youtu.be/-vQ0O_p256I">Video</a>  	
 	<footer>
-		<p>Copyright &copy; 2022 JANBAV. All rights reserved.<br>
+		<p>Copyright &copy; 2025 JANBAV. All rights reserved.<br>
 		Email: contact@janbav.org</p>
 	</footer>
 	
 
-<!--
-<p>Multi-line comment</p>
-<p> Next line </p>
-Use class to define button, text etc., put in css so all pages are consistent
-Create split windows. Hide both text box and table. Keep hidden in exercise mode
-Dynamically add columns depending on number of digits
-Add a color, font, size picker for the items. Need a settings control with a pop-up maybe?? 
--->
-<script src="Common.js">
-</script>
-<script src="index.js">
-</script>
 
 </body>
 </html>
