--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		
 		<p>This <a href="SimpleAddition.html">tool</a> will teach you how to add two numbers.</p>
 
-		<a href="https://youtu.be/-vQ0O_p256I">Video</a>  	
+		<a href="https://youtu.be/ywHPd7L0hYc">Video</a>  	
 	<footer>
 		<p>Copyright &copy; 2022 JANBAV. All rights reserved.<br>
 		Email: contact@janbav.org</p>
